fix scrollbar appearing for no reason

--- a/ui/styles/matches.css
+++ b/ui/styles/matches.css
@@ -44,7 +44,7 @@ html, body {
     align-items: center;
     height: 100%;
     padding: 3em;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .team_container {
